# vala-language-server-alpha

./: .editorconfig  .gitignore  CHANGELOG.md  CodeHelpers.vala  Context.vala  FindNode.vala  FindNodeByPosition.vala  FindNodeInFile.vala  FindSymbolByName.vala  FindSymbolByPosition.vala  FindSymbolReferences.vala  FindSymbolsInFile.vala  INSTALL-MinGW-w64.md  JsonHelpers.vala  JsonSerializable.vapi  Main.vala  MiscHelpers.vala  Protocol.vala  README.md  Reporter.vala  Server.vala  meson.build  meson_options.txt  uncrustify-csharp-style.cfg  uncrustify-glib-style.cfg  uncrustify-ref.cfg  uncrustify-vala.cfg  uncrustify.cfg  vala-language-server-lint-schema.json  vala-language-server-lint.json  vala-language-server-test.json  windows.vapi
src/: Context.vala  Main.vala  Reporter.vala  Server.vala  ServerTypes.vala  windows.vapi
src/helpers/: CodeHelpers.vala  CompletionHelpers.vala  DocumentSymbolHelpers.vala  MiscHelpers.vala  TestHelpers.vala
src/protocol/: JsonSerializable.vapi  JsonSerialization.vala  Protocol.vala
src/visitors/: CheckCodeActionsInFile.vala  CheckLintInFile.vala  FindCodeLensSymbolInFile.vala  FindCodeLensSymbolsInFile.vala  FindNode.vala  FindNodeAtPosition.vala  FindNodeByPosition.vala  FindNodeInFile.vala  FindNodeInFileNop.vala  FindSymbolByName.vala  FindSymbolByPosition.vala  FindSymbolReferenceAtPosition.vala  FindSymbolReferences.vala  FindSymbolsInFile.vala
tests/: TestMain.vala  TestsMain.vala
